--- a/omod/src/main/webapp/resources/htmlforms/ipt/iptOutcome.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipt/iptOutcome.html
@@ -27,7 +27,7 @@
 			<table>
 				<tr>
 					<td>Reason for discontinuation:</td>
-					<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159836AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 112141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 102AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Completed, Lost to followup, Discontinued, Died, Transferred Out, TB infected, Drug toxicity" style="dropdown" labelText=""  showDate="true"/></td>
+					<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" dateLabel="Date:" answerConceptIds="1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159836AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 112141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 102AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Completed, Lost to followup, Discontinued, Died, Transferred Out, TB infected, Drug toxicity" style="dropdown" labelText=""  showDate="true"/></td>
 				</tr>
 			</table>
 		</fieldset>
