Added dual kit as a first kit in mch - delivery,anc and pnc, validated cs and cs scar,pulled hts screening ontop of hts initial in forms order

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -65,6 +65,7 @@
         //Show number of clients already booked on tca date
         jq('#showNumberBooked').hide();
         getField("returnVisitDate.value").change(getPatientsBookedOnDate);
+
         //On delivery outcome change
         jq('#single').show();
         jq('#twins').hide();
@@ -87,6 +88,7 @@
         }else{
             getField('delivery-outcome.value').prop("selectedIndex", 0);
         }
+        jq('#delivery-mode select').change(getDeliveryModeChange);
         jq('#delivery-outcome select').change(onDeliveryOutcomeChange);
         jq('#baby-condition-single select').change(onSingleBabyConditionChange);
         jq('#baby-condition-twins select').change(onTwinsBabyConditionChange);
@@ -101,7 +103,6 @@
         // HIV Test validation
         //kit selected
         jq('#kit-name-1 select').change(kit1Selected);
-        jq('#kit-name-2 select').change(kit2Selected);
 
         jq("#hiv-test2").hide();
         jq('#hiv-final-result select').attr("style", "pointer-events:none;");
@@ -295,6 +296,14 @@
         }
     });
     //on ready end
+    function getDeliveryModeChange() {
+        if (getField('delivery-mode.value').val() == 1170) {
+            jq('#cs-scar select').prop('disabled', true);
+        }else{
+            jq('#cs-scar select').prop('disabled', false);
+        }
+    }
+
 
     function onDeliveryOutcomeChange() {
         if (getValue('delivery-outcome.value') == 159913) {
@@ -486,14 +495,6 @@
             $("#kit-name-2 option[value='164961']").remove();
         }
     }
-    var kit2Selected = function () {
-        var val = jq(this).val();
-        if (val == 165351 ){   //Dual kit selected
-            jq('#dual-results-2').show();
-        }else{
-            jq('#dual-results-2').hide();
-        }
-    }
 
     var expiryDateSelected  = function () {
         var encounterDate = getValue('encounter-date.value');
@@ -663,17 +664,14 @@
                             }
                             if (testKit1 == 164961 ){   //Determine kit selected
                                 $("#kit-name-2 option[value='164960']").add();
-                                $("#kit-name-2 option[value='165351']").add();
+                                $("#kit-name-2 option[value='165351']").remove();
                                 $("#kit-name-2 option[value='164961']").remove();
                             }
                             var syphylisTest1Results = getField("syphilis-test-results-1.value").val();
-                            var syphylisTest2Results = getField("syphilis-test-results-2.value").val();
                             if(syphylisTest1Results != ""){
                                 jq('#dual-results-1').show();
                             }
-                            if(syphylisTest2Results != ""){
-                                jq('#dual-results-2').show();
-                            }
+
                         });
 					</script>
 				</ifMode>
@@ -739,7 +737,17 @@
 								</td>
 								<td>Mode of Delivery:</td>
 								<td>
-									<obs conceptId="5630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="delivery-mode"/>
+									<obs conceptId="5630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="delivery-mode"
+										 answerConceptIds="1170AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                                           1171AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                                           1172AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
+                                                           118159AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Spontaneous vaginal delivery(SVD),
+                                                       Cesarean section(CS),
+                                                       Breech delivery,
+                                                       Assisted vaginal delivery(AVD)"
+										 style="dropdown"
+										 		/>
 								</td>
 							</tr>
 							<tr>
@@ -901,7 +909,7 @@
 						<tr>
 							<td>C/S Scar:</td>
 							<td>
-								<obs conceptId="162128AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								<obs conceptId="162128AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="cs-scar"
 									 answerConceptIds="162129AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,145776AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,156794AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162130AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 									 answerLabels="Wound intact and healing,Caesarean Wound Disruption,Infection of obstetric surgical wound,Surgical wound healed,Not Applicable"
 								/>
@@ -1168,14 +1176,6 @@
 											<obs id="expiry-date2" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
 											/>
 										</td>
-										<td>
-											<div id="dual-results-2" style="display:none;" >&#160;&#160;&#160;&#160; Syphilis Results
-												<obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 id="syphilis-test-results"
-													 answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabels="Negative,Positive"/>
-											</div>
-										</td>
 									</tr>
 								</obsgroup>
 								<tr>
@@ -1307,12 +1307,12 @@
 					    </td>
 					</tr>
 					<tr>
-						<td>Fistula screening: <span style="color:red;">*</span></td>
+						<td>Fistula screening: </td>
 						<td><obs conceptId="159921AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerConceptIds="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,127847AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="None,Vesicovaginal Fistula,Rectovaginal fistula,Not done"
 								 style="dropdown"
-								 id="fistula-screening" required="true"
+								 id="fistula-screening"
 								  />
 						</td>
 					</tr>
