--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -81,7 +81,6 @@
         // HIV Test validation
         //kit selected
         jq('#kit-name-1 select').change(kit1Selected);
-        jq('#kit-name-2 select').change(kit2Selected);
 
         jq('#tbl-known-positive').hide();
         jq("#hiv-test2").hide();
@@ -284,11 +283,10 @@
     }
     function onSyphilisResultChange() {
         var syphilisResult = jq('#syphilis-test-results select').val();
-        var syphilisTreated = jq('.syphilisTreated');
         if (syphilisResult == 1228) {
-            jq('.syphilis-treated').show();
+            jq('#syphilis-treated').show();
         }else{
-            jq('.syphilis-treated').hide();
+            jq('#syphilis-treated').hide();
            clearHiddenSections(jq('.syphilisTreated'));
         }
     }
@@ -453,33 +451,23 @@
     var kit1Selected = function () {
         var val = jq(this).val();
         if (val == 165351 ){   //Dual kit selected
-            jq('#dual-results-1').show();
             $("#kit-name-2 option[value='164961']").add();
             $("#kit-name-2 option[value='164960']").remove();
             $("#kit-name-2 option[value='165351']").remove();
         }
 
         if (val == 164960 ){   //Determine kit selected
-            jq('#dual-results-1').hide();
             $("#kit-name-2 option[value='164961']").add();
             $("#kit-name-2 option[value='164960']").remove();
             $("#kit-name-2 option[value='165351']").remove();
         }
         if (val == 164961 ){   //Determine kit selected
-            jq('#dual-results-1').hide();
             $("#kit-name-2 option[value='164960']").add();
-            $("#kit-name-2 option[value='165351']").add();
+            $("#kit-name-2 option[value='165351']").remove();
             $("#kit-name-2 option[value='164961']").remove();
         }
     }
-    var kit2Selected = function () {
-        var val = jq(this).val();
-        if (val == 165351 ){   //Dual kit selected
-            jq('#dual-results-2').show();
-        }else{
-            jq('#dual-results-2').hide();
-        }
-    }
+
 
     var expiryDateSelected  = function () {
         var encounterDate = getValue('encounter-date.value');
@@ -595,7 +583,6 @@
                             //show syphilis results if they exist
                             var testKit1 = getField('kit-name-1.value').val();
                             if (testKit1 == 165351 ){   //Dual kit selected
-                                jq('#dual-results-1').show();
                                 $("#kit-name-2 option[value='164961']").add();
                                 $("#kit-name-2 option[value='164960']").remove();
                                 $("#kit-name-2 option[value='165351']").remove();
@@ -608,17 +595,10 @@
                             }
                             if (testKit1 == 164961 ){   //Determine kit selected
                                 $("#kit-name-2 option[value='164960']").add();
-                                $("#kit-name-2 option[value='165351']").add();
+                                $("#kit-name-2 option[value='165351']").remove();
                                 $("#kit-name-2 option[value='164961']").remove();
                             }
-                            var syphylisTest1Results = getField("syphilis-test-results-1.value").val();
-                            var syphylisTest2Results = getField("syphilis-test-results-2.value").val();
-                            if(syphylisTest1Results != ""){
-                                jq('#dual-results-1').show();
-                            }
-                            if(syphylisTest2Results != ""){
-                                jq('#dual-results-2').show();
-                            }
+
                         });
 					</script>
 				</ifMode>
@@ -880,14 +860,6 @@
 										<obs id="expiry-date" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
 										/>
 									</td>
-									<td>
-										<div id="dual-results-1" style="display:none;" >&#160;&#160;&#160;&#160; Syphilis Results
-											<obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 id="syphilis-test-results"
-												 answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												 answerLabels="Negative,Positive"/>
-										</div>
-									</td>
 								</tr>
 								</obsgroup>
 								 <obsgroup groupingConceptId="164410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
@@ -918,14 +890,6 @@
 										<obs id="expiry-date2" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
 										/>
 									</td>
-									  <td>
-										  <div id="dual-results-2" style="display:none;" >&#160;&#160;&#160;&#160; Syphilis Results
-											  <obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												   id="syphilis-test-results"
-												   answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-												   answerLabels="Negative,Positive"/>
-										  </div>
-									  </td>
 								  </tr>
 			             	</obsgroup>
 								<tr>
@@ -1097,11 +1061,11 @@
 										<obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 id="syphilis-test-results"
 											 answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1304AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-											 answerLabels="Non Reactive,Reactive,Requested,Not Tested,Poor Sample quality"/>
+											 answerLabels="Negative,Positive,Requested,Not Tested,Poor Sample quality"/>
 										<span class="value"><recentObs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 									</td>
 									<td>
-										<table class="syphilis-treated">
+										<table id="syphilis-treated">
 											<tr>
 												<td width="250">Has the client been treated for syphilis? </td>
 												<td>
@@ -1162,21 +1126,21 @@
 									</td>
 								</tr>
 						       <tr>
-									<td>Has the client been screened for CaCx ? <span style="color:red;">*</span></td>
+									<td>Has the client been screened for CaCx ? </td>
 									<td><obs conceptId="164934"
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159393AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Normal,Presumed,Confirmed,Not Done,N/A"
 											 style="dropdown"
-											 id="cacx-screening" required="true" />
+											 id="cacx-screening" />
 									</td>
 						</tr>
 						<tr id="cacx-screening-method">
-									<td>CaCx screening method? <span style="color:red;">*</span></td>
+									<td>CaCx screening method? </td>
 									<td><obs conceptId="163589AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164977,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Pap Smear,VIA,VILI,Other"
 											 style="radio"
-											 id="screening-cacx-method" required="true"
+											 id="screening-cacx-method"
 											 />
 									</td>
 								</tr>
