filter showing of ccc or hts tracing forms based on linkage and hiv enrollment criteria

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsClientTracing.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsClientTracing.html
@@ -255,7 +255,7 @@
                             </table>
                         </td>
                         <td id="contactedAndLinked">
-                            <div style="color: lightsalmon"><b>Please fill Referral and linkage form</b></div>
+                            <div style="color: lightsalmon;font-weight: 700"><b>Please remember to fill referral and linkage form after saving this form</b></div>
                         </td>
                     </tr>
 
@@ -266,7 +266,7 @@
             <legend>Remarks </legend>
             <table id="tbl-remarks">
                 <tr>
-                    <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Remarks: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <td> Remarks: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs class="remarks" conceptId="163042AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  rows="5" cols="80"
                         />
                     </td>
