--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -1317,21 +1317,21 @@
 						</td>
 					</tr>
 					<tr>
-						<td>CaCx screening: <span style="color:red;">*</span></td>
+						<td>CaCx screening: </td>
 						<td><obs conceptId="164934"
 								 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159393AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="Normal,Presumed,Confirmed,Not Done,N/A"
 								 style="dropdown"
-								 id="cacx-screening" required="true"/>
+								 id="cacx-screening"/>
 						</td>
 					</tr>
 					<tr id="cacx-screening-method">
-						<td>CaCx screening method? <span style="color:red;">*</span></td>
+						<td>CaCx screening method? </td>
 						<td><obs conceptId="163589AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164977,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="Pap Smear,VIA,VILI,Other"
 								 style="radio"
-								 id="screening-cacx-method" required="true"
+								 id="screening-cacx-method"
 						/>
 						</td>
 					</tr>
