Updated anc visit number recent obs mismatched concept

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -634,6 +634,9 @@
 								<td> ANC Visit Number:</td>
 								<td>
 									<obs conceptId="1425AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+
+									<span class="value"><recentObs conceptId="1425AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+
 								</td>
 								<td> ANC Clinic Number:</td>
 								<td>
