--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -15,12 +15,13 @@
 <htmlform>
 
     <script type="text/javascript">
-
+        var ctxPath = typeof openmrsContextPath === 'string' ? openmrsContextPath : OPENMRS_CONTEXT_PATH;
         jQuery(function () {
 
             //Default location
             jq('#default-location').click(defaultLocationChange);//Default location
             jq('#location-referred').click(defaultReferralLocationChange);      //Default referred locations
+            jq("#hiv-id input[type=text]").blur(checkForExistingPatientIdentifiers);
 
         });
         //Checkbox to prepopulate default location
@@ -45,16 +46,30 @@
                 clearHiddenSections(jq('#location-referred'));
             }
         }
+
+        function checkForExistingPatientIdentifiers() {
+            var upnEntered = jq('#hiv-id input[type=text]').val();
+            jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/identifierExists.action', { upn: upnEntered }, function(data) {
+                jq('#upnError').hide();
+                if (data.upnExists === true) {
+
+                    jq('#upnError').text("A patient with similar CCC already exists. Please correct before proceeding");
+                    jq('#upnError').show();
+                    jq('#hiv-id input[type=text]').focus();
+                }
+
+               if(upnEntered != null &amp;&amp; upnEntered != "") {
+                   if ((/^[0-9]{10}$/.test(upnEntered) === false) &amp;&amp; (/^[0-9]{11}$/.test(upnEntered) === false)) {
+                       jq('#upnError').text("Invalid CCC Number Format! Should be mfl-clinic number, each 5 digits (accepts 11 digits for existing CCC");
+                       jq('#upnError').show();
+                   } else {
+                       getField('upn-concept.value').val(upnEntered);
+                   }
+               }
+            });
+        }
         //Before Submit
         beforeSubmit.push(function() {
-            var upn = jq('#hiv-id input').val();
-
-            if(upn != null &amp;&amp; upn != "") {
-                if ((/^[0-9]{10}$/.test(upn) === false) &amp;&amp; (/^[0-9]{11}$/.test(upn) === false)) {
-                    alert("Invalid Unique Patient Number(UPN) Format! Should be mfl-clinic number, each 5 digits (accepts 11 digits for existing UPN)");
-                    return false;
-                }
-            }
             return true;
         });
         //Clear hidden sections
@@ -118,8 +133,9 @@
                     </td><td>  <input type="checkbox" name="default-facility" id="default-location" /> This facility</td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; CCC number:
                     <td>
-                    <obs class="upn" conceptId="162053" size="20"
-                    />
+                    <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false"/></span>
+                    <span id="upnError" class="error"></span>
+                    <div style="display:none"> <obs class="upn" conceptId="162053" id="upn-concept" /></div>
                 </td>
                     </td>
                 </tr>
